bad/assign_var_class_string.example_compiler_output
ERROR
[1mbad/assign_var_class_string.lat:7:4: [1;31merror: [0;1massigning to `Y` from incompatible type `string`[m
	x = "";
	  [1;32m^[m
